# CodeBoarding

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CFGVisitor.py  CODEBOARDING.md  CONTRIBUTING.md  Dockerfile  ENHANCED_FEATURES.md  HACKTOBERFEST.md  PR_TYPE_SCRIPT_CONFIG_RESOLUTION.md  PYPI.md  PyCallCustomOutput.py  README.md  REVIEW.md  SECURITY.md  TELEMETRY.md  agent.py  agents_md_setup.py  analysis_workflows.py  benchmark_semantic_diff.py  bioinformatics_github_projects.csv  codeboarding_mcp_server.py  constants.py  custom_pycall_graph_output.py  demo.py  diagram_generator.py  duckdb_crud.py  entrypoints.py  environment.yml  error_handler.py  generate_markdown.py  github_action.py  graph_generator.py  health_main.py  install.py  llm_graph_repr.py  (+27 more)
.codeboarding/: 3c839c8909bb966e.md  471730b3c8ffced5.md  6d573da2150dc64e.md  AI_Agent_Orchestration.md  AI_Analysis_Orchestrator.json  AI_Insight_Agent.md  AI_Interpretation_Layer.json  AI_Interpretation_Layer.md  AI_Interpretation_Prompt_Management.json  AI_Processing_Layer.json  AI_Processing_Layer.md  AI_Reasoning_Health.md  AbstractionAgent.json  Agent_Core_Orchestration.md  Agent_Execution_Orchestrator.md  Agent_Orchestration_Engine.md  Agent_Orchestration_Execution_Core.md  Agent_Orchestration_Prompting.json  Agent_Orchestrator_Lifecycle_Manager.md  Agent_Runtime_Tooling.md  Agent_Tooling_Interface.md  Agentic_Analysis_Orchestrator.md  Agentic_Entity_Resolver.md  Agentic_Intelligence.md  Agentic_Interface_Serialization.md  Agentic_Reasoning_Abstraction.md  Agentic_Reasoning_Core.md  Agentic_Reasoning_LLM_Orchestration.md  Agentic_Repository_Context.md  Agentic_Tool_Interface.md  AnalysisCache.md  Analysis_Aggregator_Serializer.md  Analysis_Cache_Manager.md  Analysis_Context_Adapter_Configurator.md  Analysis_Data_Management.md  Analysis_Data_Models.md  Analysis_Engine_State_Coordinator.md  Analysis_Event_Tracker.md  Analysis_Execution_Bridge.md  Analysis_Execution_Engine.json  (+370 more)
.overclaw/: agents.toml
agent/: __init__.py  prompts.py  tools.py
agents/: abstraction_agent.py  agent.py  agent_responses.py  analysis_models.py  analysis_patcher.py  analysis_result_responses.py  cluster_ids.py  cluster_methods_mixin.py  constants.py  content_hash.py  dependency_discovery.py  details_agent.py  diff_analyzer.py  file_index_models.py  full_analysis_responses.py  incremental_agent.py  incremental_models.py  incremental_planning_agent.py  incremental_responses.py  incremental_results.py  llm_base.py  llm_config.py  llm_errors.py  markdown_enhancement.py  meta_agent.py  meta_cache.py  method_projection.py  model_capabilities.py  module_architecture.py  monitoring.py  name_arbiter.py  opencode_chat.py  opencode_launcher.py  patching_agent.py  planner_agent.py  prior_cluster_index.py  prior_index_builder.py  prompts.py  relation_edges.py  repair.py  (+7 more)
analysis_artifact/: __init__.py  parser.py  serializer.py  store.py
analysis_format/: __init__.py  analysis_json_models.py  analysis_json_parse.py  analysis_json_serialize.py  io_utils.py
benchmark_results/: incremental_deepface_20260401_152347.json  incremental_deepface_20260401_152608.json  incremental_markitdown_20260401_154231.json  incremental_markitdown_20260401_154753.json
cache/: __init__.py  _paths.py  _sqlite_store.py  meta_cache.py  static_cache.py
caching/: __init__.py  ab_cache.py  cache.py  detail_cache.py  details_cache.py  meta_cache.py
codeboarding/: __init__.py  __main__.py  _redirect.py  duckdb_crud.py  github_action.py  local_app.py  logging_config.py  main.py  tracer.py  utils.py  vscode_constants.py  vscode_runnable.py
codeboarding_cli/: bootstrap.py  parser.py  view_instructions.py
codeboarding_web/: __init__.py  app.py  component_data.py  diagram.py  events.py  runner.py  state.py  watcher.py
codeboarding_workflows/: __init__.py  analysis.py  artifact_copy.py  files.py  full.py  full_analysis.py  incremental.py  incremental_analysis.py  local.py  local_analysis.py  markdown.py  partial_analysis.py  remote.py  remote_analysis.py  rendering.py
core/: __init__.py  plugin_loader.py  protocols.py  registry.py
diagram_analysis/: __init__.py  analysis_json.py  analysis_patcher.py  change_classifier.py  checkpoints.py  cluster_delta.py  cluster_snapshot.py  delta_application.py  diagram_generator.py  estimation.py  exceptions.py  file_coverage.py  file_index.py  (+22 more)
tests/integration/projects/cpp_bazel_edge_cases_project/: .gitignore  BUILD.bazel  MODULE.bazel  greeter.cpp  greeter.hpp  main.cpp
tests/integration/projects/cpp_bazel_edge_cases_project/src/models/: base.cpp
(+1380 files in other folders)
