[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeboarding"
version = "0.9.0.dev2"
description = "Interactive Diagrams for Code"
readme = "PYPI.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.14"
authors = [
    {name = "CodeBoarding Team"}
]
keywords = ["code-understanding", "code-visualization", "code-analysis", "diagrams", "documentation", "llm", "static-analysis", "mermaid", "onboarding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "asgiref>=3.9",
    "async-timeout>=4.0",
    "docker>=7.1",
    "dotenv>=0.9",
    "duckdb>=1.3",
    "dulwich>=0.22",
    "email-validator>=2.2",
    "exceptiongroup>=1.2",
    "fastapi>=0.115",
    "filelock>=3.12",
    "gitpython>=3.1",
    "google-genai>=1.10",
    "gql>=3.5",
    "injector>=0.21",
    "ipykernel>=6.29",
    "isort>=6.0",
    "jsonschema>=4.25",
    "langchain>=1.2",
    "langchain-anthropic>=1.3",
    "langchain-aws>=1.1",
    "langchain-cerebras>=0.8",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.1",
    "langchain-ollama>=1.0",
    "langchain-openai>=1.1",
    "markdown>=3.8",
    "markdown-it-py>=3.0",
    "markitdown>=0.1",
    "matplotlib>=3.10",
    "networkx>=3.4",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pathspec>=0.12",
    "pydot>=3.0",
    "pyyaml>=6.0",
    "regex>=2024.11",
    "rich>=12.6",
    "seaborn>=0.13",
    "tomli>=2.2",
    "trustcall>=0.0.39",
    "typer>=0.9",
    "uvicorn>=0.23",
    "wcwidth>=0.2.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=7.0", "black>=25.9", "mypy>=1.19", "pre-commit>=3.8"]
all = [
    "codeboarding[dev]",
    "pylint>=3.3",
    "pyright>=1.1",
    "pyinstaller>=6.13",
    "memory-profiler>=0.61",
]

[tool.setuptools]
packages = ["agents", "agents.prompts", "agents.tools", "core", "diagram_analysis", "diagram_analysis.incremental", "health", "health.checks", "monitoring", "output_generators", "repo_utils", "static_analyzer", "static_analyzer.lsp_client", "caching"]
py-modules = ["utils", "vscode_constants", "logging_config", "duckdb_crud", "github_action", "tool_registry", "main", "install"]
include-package-data = true

[project.scripts]
codeboarding = "main:main"
codeboarding-setup = "install:main"

[project.urls]
Repository = "https://github.com/CodeBoarding/CodeBoarding"
Documentation = "https://github.com/CodeBoarding/CodeBoarding/blob/main/.codeboarding/overview.md"

[[tool.uv.index]]
name = "pypi"
default = true
url = "https://pypi.org/simple"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = "(?x)(^repos/|^build/|^dist/|^temp/|^static_analyzer/servers/)"
explicit_package_bases = true
disable_error_code = ["import-untyped", "no-any-return", "assignment"]

[tool.uv]
dev-dependencies = [
    "black==25.9.0",
    "pre-commit==3.8.0",
    "mypy==1.19.0",
    "pytest-cov==7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["repos", "build", "dist", "temp", "node_modules"]
addopts = "--ignore=repos"
pythonpath = "."
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "health: marks tests as health check integration tests",
    "python_lang: marks tests for Python language",
    "java_lang: marks tests for Java language",
    "go_lang: marks tests for Go language",
    "typescript_lang: marks tests for TypeScript language",
    "php_lang: marks tests for PHP language",
    "javascript_lang: marks tests for JavaScript language",
]