cc_binary(
    name = "cppedge",
    srcs = [
        "src/main.cpp",
        "src/models/base.cpp",
        "src/models/entities.cpp",
        "src/services/processor.cpp",
        "include/models/base.hpp",
        "include/models/entities.hpp",
        "include/services/processor.hpp",
    ],
    copts = [
        "-std=c++17",
        "-Iinclude",
    ],
    visibility = ["//visibility:public"],
)
